2001-09-20  Mark McLoughlin <mark@skynet.ie>

	* .cvsignore: s/libIDL-config/libIDL-config-2/ and
	s/libIDL.info/libIDL2.info/.

2001-09-11  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (libIDLincludedir): move headers to a versioned
	subdir, and nuke libIDLConf.sh. rename libIDL-config to
	libIDL-config-2

	* libIDL-2.0.pc.in (Cflags): change -Iincludedir to
	-Iincludedir/libIDL-2.0

2001-09-19  Mark McLoughlin <mark@skynet.ie>

	Fixes Bugs #60728 and 58458

	* lexer.l: merged patches from Raja R Harinath and 
	Takayuki Tamura.

2001-09-03  Mark McLoughlin <mark@skynet.ie>

	Fixes Bug #59824: the time to parse a union seemed to grow 
			  exponentially with the number of cases.

	* util.c, util.h (IDL_tree_is_recursive): re-implement 
	correctly. Recursion can only happen using sequences 
	in structs/unions. Replace unused hasRecur arg with
	compatibility dummy.

2001-08-02  Havoc Pennington  <hp@pobox.com>

	* Makefile.am: remove libIDL.m4 from build. It collided with
	libIDL 1, and we are in a pkg-config age. If we want to keep
	libIDL.m4 vs PKG_CHECK_MODULES(libIDL-2.0), the m4 macro 
	needs renaming.

2001-08-23  Mark McLoughlin <mark@skynet.ie>

        * libIDL/lexer.l, libIDL/parser.y,
          libIDL/util.c: cast char to int for 
	isspace() etc.

2001-06-23  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Call the library libIDL-2.la, not libIDL.la.

	* libIDL-2.0.pc.in: Copied from ORBit-martin-forked/libIDL.

2000-10-02 Elliot Lee <sopwith@redhat.com>
	* parser.y (interface_catch_ident): Allow 'Object' and 'TypeCode' interface
	names in pidl mode.

2000-08-28 Elliot Lee <sopwith@redhat.com>
	* util.c (is_recursive_walker): Fix segfault when past was NULL (aka data type has
	no parent).

2000-07-14  Michael Meeks  <michael@helixcode.com>

	* parser.y (positive_int_const): incr. ref count.

1999-10-17  Andrew T. Veliath  <andrewtv@usa.net>

	* Update version to 0.6.8.

1999-06-09  Andrew T. Veliath  <andrewtv@usa.net>

	* lexer.l: