@@ -19,7 +19,7 @@ LIBIDL_MICRO_VERSION=0
 LIBIDL_INTERFACE_AGE=0
 LIBIDL_BINARY_AGE=0
 LIBIDL_LIBRARY_VERSION=$LIBIDL_MAJOR_VERSION.$LIBIDL_MINOR_VERSION.$LIBIDL_MICRO_VERSION
-GLIB_VERSION_REQUIRED=1.3.1
+GLIB_VERSION_REQUIRED=1.3.7
 AC_DIVERT_POP()dnl
 
 AC_SUBST(LIBIDL_MAJOR_VERSION)
