@@ -1,3 +1,12 @@
+2001-09-21  Mark McLoughlin <mark@skynet.ie>
+
+	* lexer.l (cpp_status): reimplement to take into account
+	differences with variouts compilers.
+
+	* lexer.l, parser.y: use g_ascii_ispace instead of isspace.
+
+	* configure.in: require glib-1.3.7 for g_ascii_ispace.
+
 2001-09-20  Mark McLoughlin <mark@skynet.ie>
 
 	* .cvsignore: s/libIDL-config/libIDL-config-2/ and
